--- a/Swift3/scratchy/scratchy/Third.storyboard
+++ b/Swift3/scratchy/scratchy/Third.storyboard
@@ -151,7 +151,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="wRC-6M-jzw" kind="relationship" relationship="rootViewController" id="BmZ-n5-jVA"/>
+                        <segue destination="wRC-6M-jzw" kind="relationship" relationship="rootViewController" id="S0d-24-yTu"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H6n-pP-oko" userLabel="First Responder" sceneMemberID="firstResponder"/>
